# securemed_chat

./: .agentignore  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  config.py  deployment_guide.md  docker-compose.yml  gradio_app.py  ollama_rag_long.ipynb  ollama_rag_tutorial.ipynb  problems.md  pyproject.toml  requirements.txt  system_diagnostic.md  vertexAI_chromaDB.ipynb
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
docs/: PRD.md  SPRINTS.md
faiss_index_ollama/: index.faiss
gradio/: README.md  gradio_app.py  requirements.txt
reflex_app/: .gitignore  rxconfig.py
reflex_app/preconsult/: i18n.py  preconsult.py  state.py
reflex_app/securemed/: i18n.py  securemed.py  state.py
scripts/: build_vector_store.py  deploy_backend.sh  setup_wif.sh  vertexAI_chromaDB.ipynb
src/preconsult/: main.py
src/preconsult/api/: endpoints.py
src/preconsult/core/: config.py
src/preconsult/services/: agent_service.py  pdf_service.py
src/securemed_chat/: main.py
src/securemed_chat/api/: endpoints.py
src/securemed_chat/core/: config.py  llm.py
src/securemed_chat/services/: agent_service.py  pdf_service.py  rag_service.py  session_service.py
tests/: conftest.py  test_agent_service.py  test_api_integration.py  test_pdf_service.py  test_rate_limit.py  test_reflex_app.py  test_security.py  test_session_service.py
